xscreensaver (5.10-3) UNRELEASED; urgency=low

  * Moved 20_hack_flurry_man_name to 11_upstream_flurry_man_name

 -- Tormod Volden <debian.tormod@gmail.com>  Sun, 27 Sep 2009 22:29:35 +0200

xscreensaver (5.10-2) unstable; urgency=low

  * Updated my email address in debian/copyright.
  * Added README.hacking to debian/xscreensaver.docs (Closes: #544352).
  * Included a hook for Xsession thanks to Y Giridhar Appaji Nag 
    <debian@appaji.net> (Closes: #357297).
  * Fixed the changelog.

 -- Jose Luis Rivas <ghostbar@debian.org>  Fri, 25 Sep 2009 16:52:44 -0430

xscreensaver (5.10-1) unstable; urgency=low

  [ Tormod Volden ]
  * Drop patch applied upstream:
    - 12_upstream_fix_typo_in_de.po.patch
  * Removed hyperball and hypercube hacks, retired upstream

  [ Jose Luis Rivas ]
  * Updated Standards-Version to 3.8.3 w/o any changes needed.
  * Created debian/README.source.
  * Added patch 20_hack_flurry_man_name for NAME section of
    manpage for flurry hack.
  * Changed my email address from ghostbar38@gmail.com to
    ghostbar@debian.org in Maintainer field.
  * Acknowledging NMU for 5.05.

  [ Tormod Volden ]
  * New Upstream Version
    - Fixed intermittent failure in xscreensaver-command
      Thanks to contribution by James Vega (Closes: 486603)
    - Fixed another potential RANDR crash
  * Drop patches applied upstream:
    - 11_upstream_phosphor_segfault_win_size.patch
    - 63_upstream_blinkbox-man.patch
    - 64_upstream_topblock-man.patch
    - 65_upstream_eruption-man.patch
    - 66_upstream_truchet-man.patch
    - 67_upstream_metaballs-man.patch
    - 70_upstream_fix_local_screenlock_bypass.patch  (Closes: #539699)
  * Do not ship juggle any longer (merged with juggler3d)
  * Ship new hacks: rubikblocks and surfaces
  * 80_Makefile_in-clean-fix.patch: Workaround for make distclean
    failure in some situations, probably autoconf 2.64 issue
  * Ship the new "photopile" hack
  * Delete two unused patches (52_ and 60_) from source