@@ -1,2 +1,0 @@
-debian/xscreensaver.svg /usr/share/pixmaps
-debian/80xscreensaver_start /etc/X11/Xsession.d
