@@ -37,3 +37,5 @@ usr/share/xscreensaver/glade/screensaver-locking.png
 usr/share/xscreensaver/glade/screensaver-power.png
 usr/share/xscreensaver/glade/screensaver-snap.png
 usr/share/xscreensaver/glade/xscreensaver-demo.glade2
+debian/xscreensaver.svg /usr/share/pixmaps
+debian/80xscreensaver_start /etc/X11/Xsession.d
