@@ -1,6 +1,9 @@
 xscreensaver (5.10-3) UNRELEASED; urgency=low
 
   * Moved 20_hack_flurry_man_name to 11_upstream_flurry_man_name
+  * debian/split-config.sh, debian/rules, etc: Auto-generate the
+    package.install files to make one single dh_install{,man} call
+    since this is so much more efficent.
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 27 Sep 2009 22:29:35 +0200
 
